# APA

./: .gitignore  requirements.txt
conan/: conanfile.txt
knapsack-problem-0-1/: CMakeLists.txt  main_knapsack.cpp
knapsack-problem-0-1/analysis/: knapsack-results.ipynb
knapsack-problem-0-1/brute-force/: CMakeLists.txt
knapsack-problem-0-1/brute-force/includes/: BruteForce.h
knapsack-problem-0-1/brute-force/src/: BruteForce.cpp
knapsack-problem-0-1/brute-force/tests/: CMakeLists.txt  unittests_brute_force.cpp
knapsack-problem-0-1/common/: IKnapSackSolver.h  Structures.h  utils.hpp
knapsack-problem-0-1/dynamic-programming/: CMakeLists.txt
knapsack-problem-0-1/dynamic-programming/includes/: DPSolver.h
knapsack-problem-0-1/dynamic-programming/src/: DPSolver.cpp
knapsack-problem-0-1/dynamic-programming/tests/: CMakeLists.txt  unittests_dpsolver.cpp
knapsack-problem-0-1/greedy/: CMakeLists.txt
knapsack-problem-0-1/greedy/includes/: Greedy.h
knapsack-problem-0-1/greedy/src/: Greedy.cpp
knapsack-problem-0-1/greedy/tests/: CMakeLists.txt  unittests_greedy.cpp
knapsack-problem-0-1/or-tools/tests/: CMakeLists.txt  unittests_ortools.cpp
sorting/: CMakeLists.txt  main_generate_data.cpp
sorting/common/: IPartitionStrategy.h  ISortingAlgorithms.h  interfaces.h  utils.hpp
sorting/common/strategys/partition/: HoarePartition.hpp
sorting/insertion_sort/: CMakeLists.txt  main.cpp
sorting/insertion_sort/includes/: InsertionSort.h
sorting/insertion_sort/src/: InsertionSort.cpp
sorting/insertion_sort/tests/: CMakeLists.txt  unittests_insertion_sort.cpp
sorting/merge_sort/: CMakeLists.txt
sorting/merge_sort/includes/: MergeSort.h
sorting/merge_sort/src/: MergeSort.cpp
sorting/merge_sort/tests/: CMakeLists.txt  unittests_merge_sort.cpp
sorting/quick_sort/: CMakeLists.txt
sorting/quick_sort/includes/: QuickSort.h
sorting/quick_sort/src/: QuickSort.cpp
sorting/quick_sort/tests/: CMakeLists.txt  unittests_quick_sort.cpp
sorting/selection_sort/: CMakeLists.txt
sorting/selection_sort/includes/: SelectionSort.h
sorting/selection_sort/src/: SelectionSort.cpp
sorting/selection_sort/tests/: CMakeLists.txt  unittests_selection_sort.cpp
